--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,31 +33,39 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.WeatherApp" />
+            android:theme="@style/Theme.WeatherApp"
+            android:configChanges="orientation|screenSize"
+            />
 
         <!-- RegisterActivity -->
         <activity
             android:name=".RegisterActivity"
             android:exported="true"
             android:label="Register"
-            android:theme="@style/Theme.WeatherApp" />
+            android:theme="@style/Theme.WeatherApp"
+            android:configChanges="orientation|screenSize"/>
 
         <!-- LoginActivity -->
         <activity
             android:name=".LoginActivity"
             android:exported="true"
             android:label="Login"
-            android:theme="@style/Theme.WeatherApp" />
+            android:theme="@style/Theme.WeatherApp"
+            android:configChanges="orientation|screenSize"
+            />
         <activity
             android:name=".SettingsActivity"
             android:exported="true"
             android:label="Login"
-            android:theme="@style/Theme.WeatherApp" />
+            android:theme="@style/Theme.WeatherApp"
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name=".WeatherActivity"
             android:exported="true"
             android:label="Login"
-            android:theme="@style/Theme.WeatherApp" />
+            android:theme="@style/Theme.WeatherApp"
+            android:configChanges="orientation|screenSize"
+            />
 
     </application>
 
